# simulate-input-clipboard

./: README.md  pyproject.toml
simulate_input_clipboard/: main.py
