[tool.poetry]
name = "simulate-input-clipboard"
version = "0.0.0"
description = ""
authors = ["tpob <tpob@tpob.xyz>"]
readme = "README.md"
packages = [{include = "simulate_input_clipboard"}]

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.53"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
